force-app/main/default/objects/User_Provisioning_Request__c/User_Provisioning_Request__c.object-meta.xml
<CustomObject>
    <description>Custom object to store user provisioning request details which includes Business Function, Business Roles, Requestor, Approver, Status</description>
    <label>ANZ User Provisioning Request</label>
    <nameField>
        <displayFormat>U-{000000}</displayFormat>
        <label>User Provisioning Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ANZ User Provisioning Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>