force-app/main/default/objects/User_Provisioning_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who approves the request from another user</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Provisioning_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>