force-app/main/default/objects/User_Provisioning_Request__c/fields/Business_Function__c.field-meta.xml
<CustomField>
    <fullName>Business_Function__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information</complianceGroup>
    <description>Business Function of the User which will be used in the user trigger to provide permissions</description>
    <label>Business Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZx</fullName>
            </value>
            <value>
                <fullName>CMoS</fullName>
            </value>
            <value>
                <fullName>Test Business Function</fullName>
                <isActive>false</isActive>
                <label>Test Business Function</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>