force-app/main/default/objects/User_Provisioning_Request__c/fields/Business_Role__c.field-meta.xml
<CustomField>
    <fullName>Business_Role__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Integrity_Trusted</complianceGroup>
    <description>Business Role of the user which will be used in User trigger to provide permissions</description>
    <label>Business Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Analyst</fullName>
            </value>
            <value>
                <fullName>All Customer Resolution</fullName>
            </value>
            <value>
                <fullName>Frontline Manager</fullName>
            </value>
            <value>
                <fullName>Frontline Banker</fullName>
            </value>
            <value>
                <fullName>Tech Support</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Fraud Agent</fullName>
            </value>
            <value>
                <fullName>Card Dispute Agent</fullName>
            </value>
            <value>
                <fullName>Support Coach</fullName>
            </value>
            <value>
                <fullName>Content Writer</fullName>
            </value>
            <value>
                <fullName>Quality Analyst</fullName>
            </value>
            <value>
                <fullName>Systemic Issues Team</fullName>
            </value>
            <value>
                <fullName>Systemic Issue BU Contacts</fullName>
            </value>
            <value>
                <fullName>CRP Leader Group 3 or above</fullName>
            </value>
            <value>
                <fullName>Customer Resolution Team Leaders</fullName>
            </value>
            <value>
                <fullName>Banker</fullName>
                <isActive>false</isActive>
                <label>Banker</label>
            </value>
            <value>
                <fullName>Business Role</fullName>
                <isActive>false</isActive>
                <label>Business Role</label>
            </value>
            <value>
                <fullName>Customer Resolution</fullName>
                <isActive>false</isActive>
                <label>Customer Resolution</label>
            </value>
            <value>
                <fullName>Manager</fullName>
                <isActive>false</isActive>
                <label>Manager</label>
            </value>
            <value>
                <fullName>Super Support Admin</fullName>
                <isActive>false</isActive>
                <label>Super Support Admin</label>
            </value>
            <value>
                <fullName>Support Staff ARC</fullName>
                <isActive>false</isActive>
                <label>Support Staff ARC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>