force-app/main/default/objects/User_Provisioning_Request__c/fields/Manager_UUID__c.field-meta.xml
<CustomField>
    <fullName>Manager_UUID__c</fullName>
    <complianceGroup>Integrity - Accurate</complianceGroup>
    <description>field to store the Federation ID of the manager user</description>
    <label>Manager UUID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>