force-app/main/default/objects/User_Provisioning_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who submits a request for access</description>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Provisioning_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>