force-app/main/default/objects/User_Provisioning_Request__c/fields/Requestor_UUID__c.field-meta.xml
<CustomField>
    <fullName>Requestor_UUID__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>External ID field to store the Federation ID of the requested user</description>
    <externalId>true</externalId>
    <label>Requestor UUID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>