force-app/main/default/objects/User_Provisioning_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Function__c</columns>
    <columns>Business_Role__c</columns>
    <columns>Requestor_UUID__c</columns>
    <columns>Type__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>